fix(tldraw): clerk components and dark mode

--- a/styles/tldraw/catppuccin.user.less
+++ b/styles/tldraw/catppuccin.user.less
@@ -26,10 +26,8 @@
     #catppuccin(@lightFlavor);
   }
 
-  /* for clerk components in modal */
-  /* force latte because clerk on tldraw doesn't have dark mode set */
   :root:has(.tl-container.tl-theme__dark) .cl-modalContent {
-    #catppuccin(@lightFlavor);
+    #catppuccin(@darkFlavor);
   }
 
   :root:has(.tl-container.tl-theme__light) .cl-modalContent {
@@ -456,21 +454,24 @@
     }
 
     /* clerk components */
-    .cl-card {
-      background-color: @mantle;
+    --clerk-color-background: @mantle;
+    --clerk-color-primary: @text;
+    --clerk-color-primary-foreground: @crust;
+    --clerk-color-foreground: @subtext1;
+    --clerk-color-neutral: @text;
+    --clerk-color-input: @base;
+    --clerk-color-input-foreground: @text;
+    --clerk-color-border: @text;
+
+    .cl-socialButtonsBlockButton:hover {
+      background-color: @surface0;
     }
 
-    .cl-formButtonPrimary {
-      background-color: @accent;
-    }
-
-    h1.cl-headerTitle,
-    .cl-formFieldLabel {
-      color: @text !important;
-    }
-
-    .cl-input {
-      background-color: @base;
+    .cl-logoImage {
+      @svg: escape(
+        '<svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" width="200" height="200"><path fill="@{text}" d="M178.95 0H21.05C9.425 0 0 9.833 0 21.975v156.05C0 190.158 9.425 200 21.05 200h157.9C190.575 200 200 190.167 200 178.025V21.975C200 9.842 190.575 0 178.95 0m-91.75 44.9q4.958 -5.058 12.283 -5.058 7.117 0 12.067 5.058 4.958 5.05 4.958 12.3c0 7.25 -1.65 8.933 -4.958 12.3a16.25 16.25 0 0 1 -12.067 5.058q-7.325 0 -12.283 -5.058 -4.95 -5.05 -4.95 -12.3c0 -7.25 1.65 -8.933 4.95 -12.3m26.083 95.75a40.833 40.833 0 0 1 -16.817 17.8q-6.033 3.517 -9.917 -0.217 -3.65 -3.517 2.167 -8.35 3.225 -2.417 5.383 -6.15 2.15 -3.742 2.8 -7.692 0.217 -1.75 -1.508 -1.75 -4.308 -0.225 -8.833 -4.842t-4.525 -11.417q0 -7.25 4.95 -12.308a16.833 16.833 0 0 1 12.5 -5.275q6.9 0 12.067 5.275 5.167 5.042 6.033 11.417 1.725 11.867 -4.308 23.517z"/></svg>'
+      );
+      content: url("data:image/svg+xml,@{svg}");
     }
   }
 }
